--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,31 @@
+h1 {
+  margin: auto;
+}
+
+button {
+  width: 100px;
+}
+
 .container {
   background: #f1f1f1;
   color: rgba(22, 28, 45, 0.7);
   width: 500px;
+  text-align: center;
   padding: 1.5rem;
-  margin: 1rem;
+  margin: auto;
   border-radius: 5px;
   box-shadow: 0 22px 34px rgba(22, 24, 45, 0.18);
   transition: all 300ms ease-in-out;
+}
+
+.clock {
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: orange;
+  border-radius: 20px;
+  height: 50px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
